--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,18 @@ html, body, #map {
 #map img {
   max-width: none;
 }
+
+#map {
+  position: absolute;
+  right: 300px;
+  left: 0;
+}
+
+#sidebar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+  right: 0;
+  width: 300px;
+}
