--- a/public/style.css
+++ b/public/style.css
@@ -64,3 +64,15 @@ html, body, #map {
   font-size: 10px;
   margin: 0;
 }
+
+#sidebar .wordCloud {
+  width: 275px;
+  padding-left: 15px;
+  padding-right: 10px;
+  word-wrap: break-word;
+}
+
+#sidebar .wordCloud span {
+  display: inline;
+  padding: 2px;
+}
