--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-html, body, #map {
+html, body {
   height: 100%;
 }
 
@@ -11,6 +11,15 @@ html, body, #map {
   position: absolute;
   right: 300px;
   left: 0;
+  height:70%;
+}
+
+#timedensity {
+  position: absolute;
+  right: 300px;
+  left: 0;
+  top: 70%;
+  height:30%;
 }
 
 #sidebar {
